# internal/handler/users.go
@@ -46,3 +46,49 @@ func (service *API) CreateUser(c *gin.Context) {
 
 	c.JSON(http.StatusCreated, created)
 }
+
+// LoginUser login
+// @Summary returns a new token
+// @Description Used login and get a new token
+// @Tags Auth
+// @Produce json
+// @Param data body entity.User true "username and password"
+// @Success 200 {object} entity.UserTokenDTO
+// @Failure 400 {object} entity.FailureResponse
+// @Failure 409 {object} entity.FailureResponse
+// @Failure 500 {object} entity.FailureResponse
+// @Router /v1/login [POST]
+func (service *API) LoginUser(c *gin.Context) {
+	var input *entity.User
+	err := c.BindJSON(&input)
+	if err != nil {
+		common.Failure("User data incorrect", err.Error(), http.StatusBadRequest, c)
+		return
+	}
+
+	input.Password = common.HashString(input.Password)
+
+	user, err := service.App.Repo.UserAuth(input.UserName, input.Password)
+	if err != nil {
+		if repository.IsRecordNotFound(err) {
+			common.Failure("Invalid credentials", err.Error(), http.StatusNotFound, c)
+			return
+		}
+		common.Failure("Error trying to get user data", err.Error(), http.StatusInternalServerError, c)
+		return
+	}
+
+	token, err := GetToken(user.Id, user.UserName)
+	if err != nil {
+		common.Failure("Error trying to build new token", err.Error(), http.StatusInternalServerError, c)
+		return
+	}
+
+	data := entity.UserTokenDTO{
+		UserID:   user.Id,
+		Username: user.UserName,
+		Token:    token,
+	}
+
+	c.JSON(http.StatusOK, data)
+}
